# competitive-rs

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
examples/: atc001_b.rs  bench.rs
src/: binary_search.rs  bits.rs  collections.rs  display.rs  geo.rs  gf.rs  graph.rs  inf.rs  io.rs  iter.rs  ix.rs  kmp.rs  lib.rs  monoid.rs  num.rs  number.rs  prelude.rs  prime.rs  range.rs  segment_tree.rs  union_find.rs  util.rs
src/slice/: mod.rs  partial_sum.rs  permutation.rs
