[package]
name = "competitive"
version = "0.1.0"
authors = ["Hideyuki Tanaka <tanaka.hideyuki@gmail.com>"]
edition = "2018"

[profile.release]
lto = true
panic = 'abort'

[dependencies]
comprehension = "*"
itertools = "0.8"
memoise = "*"
ndarray = "0.13"
num = "0.2"
proconio = "0.3"
typenum = "1.11"
typenum-promote = "0.1"
