[package]
name = "competitive"
version = "0.1.0"
authors = ["Hideyuki Tanaka <tanaka.hideyuki@gmail.com>"]
edition = "2018"

[profile.release]
lto = true
panic = 'abort'

[dependencies]
argio = "0.1"
comprehension = "0.2"
itertools = "0.9"
memoise = "0.3"
ndarray = "0.13"
num = "0.3"
proconio = "0.4"
typenum = "1.12"
typenum-promote = "0.1"
